fix alignment of expand items in global search, fixes #4617
Closes #4617

Merge request studip/studip!3430

--- a/resources/assets/stylesheets/scss/globalsearch.scss
+++ b/resources/assets/stylesheets/scss/globalsearch.scss
@@ -175,6 +175,7 @@
                 display: flex;
                 flex-direction: row;
                 flex-wrap: nowrap;
+                gap: 6px;
 
                 padding: 6px 6px 6px 0;
 
@@ -200,7 +201,6 @@
                 .globalsearch-result-img {
                     flex: 0;
                     margin-left: 6px;
-                    margin-right: 6px;
 
                     img {
                         @include square(36px);
@@ -210,7 +210,6 @@
                 .globalsearch-result-data {
                     flex: 1;
                     overflow: hidden;
-                    margin-right: 6px;
                     white-space: nowrap;
 
                     .globalsearch-result-title {
@@ -235,7 +234,7 @@
                 }
 
                 .globalsearch-result-expand {
-                    flex: auto;
+                    flex: 0;
                     margin: 20px 0 0 -32px;
 
                     a {
